--- a/public/noIE.html
+++ b/public/noIE.html
@@ -28,7 +28,7 @@ h2,h3 {
     <!-- やさしいHTML (HTML5的にはだめだけど) -->
     <h1>错误</h1>
     <p><strong>您使用的可能不是最新的浏览器，在当前浏览器环境下无法正常的参与月下人狼游戏。</strong></p>
-    <p>鉴于您很可能使用了某种古老的浏览器，本站在此建议您尝试使用最新的浏览器。</p>
+    <p>鉴于您很可能使用了某种古老的浏览器，本站在此建议您尝试使用最新的浏览器。比如<b>Google Chrome</b>、<b>Firefox</b>、<b>傲游云浏览器</b></p>
 
     <h2>快速问答</h2>
     <div class="sec">
