spec and translation fix

--- a/public/noIE.html
+++ b/public/noIE.html
@@ -52,7 +52,7 @@ h2,h3 {
       </div>
       <h3>如果您已经使用了最新版本的浏览器仍看到此页面。</h3>
       <div class="sec">
-        <p>「月下人狼」推荐您使用Google Chrome, Firefox, Opera, Safari(Mac版)这几款浏览器。如果您使用此外的浏览器，即便是最新版仍有可能无法正常参与月下狼人游戏。</p>
+        <p>「月下人狼」推荐您使用Google Chrome, Firefox, Opera, Safari(Mac版)这几款浏览器。如果您使用此外的浏览器，即便是最新版仍有可能无法正常参与月下人狼游戏。</p>
         <p>此外，本站不推荐您使用Internet Explorer浏览器，即便最新版的Internet Explorer浏览器能够参与游戏的情况下，本站仍不推荐您使用。这一系列的浏览器虽然在大部分情况下能够正常游戏，但是仍然存在由于兼容性问题引起错误动作的可能。</p>
       </div>
     </div>
